# QT-GentAI-MCP

./: LICENSE  README.md
Projects/mcp-server/: pyproject.toml  server.py
calc_mcp/: calc.py
fastmcp_api_demo/: .dockerignore  README.md  docker-compose.yaml  main.py  pyproject.toml
fastmcp_http/: Dockerfile  README.md  pyproject.toml  server.py
hello_mcp/: README.md  hello.json  hello.py  pyproject.toml
hello_resource/: hello_resource.py  main.py  pyproject.toml
hello_streamable_http/: claude.json  main.py  pyproject.toml  server.py
huggingface/: Huggingface_QT.ipynb
huggingface/hello-transformer/: .gitignore  README.md  main.py  pyproject.toml
huggingface/huggingface-googlecolab/: README.md  huggingface_qt 2.py  huggingface_qt.py
langchain_mcp_client/: main.py  pyproject.toml  server.py
mcp_auth_password/: main.py  pyproject.toml  server.py
sampling_mcp_demo/: main.py  pyproject.toml  server.py
starlette_basic/: main.py  pyproject.toml
starlette_mcp/: main.py  starlette.json
swig_mcp/: customercare.py  latetimedelivery.md  main.py  model.py  models.py  pyproject.toml  refundpolicy.md  swiggy.json
swig_mcp/notebooks/: pydantic.ipynb
swigy_streamable_http/: claude_desktop.json  customercare.py  latetimedelivery.md  main.py  pyproject.toml  refundpolicy.md
