[project]
name = "langchain-mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "langchain>=1.2.3",
    "langchain-google-vertexai>=3.2.1",
    "langchain-mcp-adapters>=0.2.1",
    "mcp[cli]>=1.25.0",
]
