[project]
name = "hello-transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.2",
    "evaluate>=0.4.6",
    "sacremoses>=0.1.1",
    "sentencepiece>=0.2.1",
    "tokenizers>=0.22.1",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
